--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-PORT=5513
+PORT=
+MONGO_CONNECTION_STRING=
+NODE_ENV=development
+JWT_SECRET=
+CLOUDINARY_CLOUD=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
